# composcan

./: README.md  pyproject.toml
src/composcan/: __init__.py  __main__.py
src/composcan/compliance/: oss_check.py  sbom.py
src/composcan/scanners/: dep_scanner.py  license_scanner.py  outdated_scanner.py  vuln_scanner.py
tests/: test_dep_scanner.py
